[gd_scene load_steps=2 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_main"]

[node name="Main" type="Node"]
script = ExtResource("1_main")

[node name="SceneContainer" type="Node" parent="."]

[node name="FadeLayer" type="CanvasLayer" parent="."]
layer = 50

[node name="FadeRect" type="ColorRect" parent="FadeLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
